configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: movie-app-pod-using-configmap
spec:
  containers:
    - name: test-container
      image: nginx
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
        name: movie-config
  restartPolicy: Never
