secrets-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - image: redis
    name: redis
    volumeMounts:
    - name: secretvolume
      mountPath: /etc/secret
  volumes:
  - name: secretvolume
    secret:
      secretName: vinsecret
