service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo-app
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30008
  type: LoadBalancer
